[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seillra"
version = "1.4.7"
description = "Easy access to a low-rank approximation of Sei"
readme = "README_dist.md"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "requests",
    "platformdirs",
    "tqdm",
    "pyyaml",
    "bitsandbytes",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["dist"]
