[build-system]
requires = ["setuptools>=61.0"]
build-backend = "setuptools.build_meta"

[project]
name = "seillra"
version = "1.5.6"
description = "Easy access to a low-rank approximation of Sei"
readme = "README_dist.md"
dependencies = [
    "torch",
    "numpy",
    "scipy",
    "requests",
    "platformdirs",
    "tqdm",
    "pyyaml" 
]

[project.optional-dependencies]
gpu-int8 = [
    "torch_tensorrt",
    "nvidia-modelopt",
]

[tool.setuptools]
include-package-data = true

[tool.setuptools.packages.find]
where = ["dist"]

[tool.setuptools.package-data]
seillra = ["doc/*.ipynb"]
